non-working LL + firstSet

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,4 +22,6 @@ add_executable(compiler
         SetStates.cpp
         SetStates.h
         State.cpp
-        State.h)
+        State.h
+        LL1.cpp
+        LL1.h)
